--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,4 +6,4 @@ WORKDIR app
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt && apt-get clean
 
-CMD python main.py
+CMD python3 main.py
