--- a/compose.yaml
+++ b/compose.yaml
@@ -7,36 +7,36 @@ services:
     volumes:
       - ./backend:/app
     stop_signal: SIGINT
-#    depends_on:
-#      database:
-#        condition: service_healthy
-#    networks:
-#      - backend-db
-#
-#  database:
-#    image: postgres
-#    secrets:
-#      - db-password
-#    environment:
-#       POSTGRES_USER: postgres
-#       POSTGRES_PASSWORD_FILE: /run/secrets/db-password
-#       POSTGRES_DB: db
-#    healthcheck:
-#       test: [ "CMD-SHELL", "pg_isready -U postgres" ]
-#       interval: 5s
-#       timeout: 5s
-#       retries: 5
-#    volumes:
-#      - db-data:/var/lib/postgresql/data
-#    networks:
-#      - backend-db
-#
-#volumes:
-#  db-data:
-#
-#secrets:
-#  db-password:
-#    file: userDatabase/password.txt
-#
-#networks:
-#  backend-db:
+    depends_on:
+      database:
+        condition: service_healthy
+    networks:
+      - backend-db
+
+  database:
+    image: postgres
+    secrets:
+      - db-password
+    environment:
+       POSTGRES_USER: postgres
+       POSTGRES_PASSWORD_FILE: /run/secrets/db-password
+       POSTGRES_DB: db
+    healthcheck:
+       test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+       interval: 5s
+       timeout: 5s
+       retries: 5
+    volumes:
+      - db-data:/var/lib/postgresql/data
+    networks:
+      - backend-db
+
+volumes:
+  db-data:
+
+secrets:
+  db-password:
+    file: userDatabase/password.txt
+
+networks:
+  backend-db:
