--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,7 @@
 FROM ubuntu
 
 RUN apt-get update && apt-get install -y python3-pip
+RUN pip3 install PyMySQL
 
 WORKDIR app
 COPY requirements.txt requirements.txt
